[package]
name = "tetsuki-actix"
version = "0.1.0"
authors = ["Chehui Chou <deadshot465@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "~0.6.0-beta.7"
actix-service = "~2.0.0"
actix-web = { version = "~4.0.0-beta.9", features = ["rustls"] }
anyhow = "~1.0.43"
awc = "~3.0.0-beta.8"
chrono = "~0.4.19"
dashmap = "~4.0.2"
dotenv = "~0.15.0"
env_logger = "~0.9.0"
funty = "=1.1.0"
futures = "~0.3.14"
jsonwebtoken = "~8.0.0-beta.2"
log = "~0.4.14"
once_cell = "~1.8.0"
rand = "~0.8.4"
serde = "~1.0.130"
serde_json = "~1.0.67"
sqlx = { version = "~0.5.7", features = ["postgres", "runtime-actix-rustls", "json"] }
thirtyfour = "~0.27.0"

[profile.dev]
split-debuginfo = "unpacked"