[package]
name = "tetsuki-actix"
version = "0.1.0"
authors = ["Chehui Chou <deadshot465@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "~0.6.0"
actix-service = "~2.0.2"
actix-web = { version = "~4.0.1", features = ["rustls"] }
anyhow = "~1.0.57"
awc = "~3.0.0"
chrono = "~0.4.19"
dashmap = "~5.2.0"
dotenv = "~0.15.0"
env_logger = "~0.9.0"
funty = "=1.1.0"
futures = "~0.3.21"
jsonwebtoken = "~8.1.0"
log = "~0.4.16"
once_cell = "~1.10.0"
rand = "~0.8.5"
serde = "~1.0.136"
serde_json = "~1.0.79"
sqlx = { version = "~0.5.13", features = ["postgres", "runtime-actix-rustls", "json"] }
thirtyfour = "~0.28.3"
toml = ">=0.5.9"

[profile.dev]
split-debuginfo = "unpacked"
