[package]
name = "tetsuki-axum"
version = "2.3.1"
authors = ["Chehui Chou <deadshot465@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.57"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
azure_core = "0.19.0"
azure_data_cosmos = "0.19.0"
dashmap = "5.4.0"
dotenv = "~0.15.0"
futures = "~0.3.21"
jsonwebtoken = "9.3.0"
once_cell = "1.17.1"
rand = "~0.8.5"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "~1.0.136"
serde_json = "~1.0.79"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "json"] }
thirtyfour = "0.32.0"
time = { version = "~0.3.11", features = ["serde", "serde-well-known"] }
tokio = { version = "1.27.0", features = ["full"] }
toml = ">=0.7.3"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "*"

[profile.dev]
split-debuginfo = "unpacked"
